--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,13 @@ cryptography==36.0.0
 defusedxml==0.7.1
 Django==3.2.9
 django-allauth==0.46.0
+django-countries==7.2.1
 django-filter==21.1
+django-widget-tweaks==1.4.9
+djangorestframework==3.12.4
 idna==3.3
 oauthlib==3.1.1
+Pillow==8.4.0
 pkg_resources==0.0.0
 psycopg2-binary==2.9.2
 pycodestyle==2.8.0
