--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ defusedxml==0.7.1
 Django==3.2.9
 django-allauth==0.46.0
 django-countries==7.2.1
+django-environ==0.8.1
 django-filter==21.1
 django-widget-tweaks==1.4.9
 djangorestframework==3.12.4
+gunicorn==20.1.0
 idna==3.3
 isort==5.10.1
 lazy-object-proxy==1.6.0
@@ -20,7 +22,6 @@ mypy==0.910
 mypy-extensions==0.4.3
 oauthlib==3.1.1
 Pillow==8.4.0
-pkg_resources==0.0.0
 platformdirs==2.4.0
 psycopg2-binary==2.9.2
 pycodestyle==2.8.0
